--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 			href="https://fonts.googleapis.com/css2?family=Podkova:wght@400;500;600;700;800&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Bitcontree--Interview</title>
+		<title>Bitontree--Interview</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
